<?xml version="1.0"?>
<package format="2">
  <name>mediapipe_ros</name>
  <version>0.0.0</version>
  <description>The mediapipe_ros package</description>

  <maintainer email="chikuta@invalid.com">chikuta</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python3-mediapipe-pip</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python-pyrealsense2-pip</exec_depend>

  <export>
  </export>
</package>
